[gd_scene load_steps=7 format=2]

[ext_resource path="res://Icons64x64/Menu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Silible Editor.gd" type="Script" id=2]
[ext_resource path="res://Icons64x64/Silible_Mid.png" type="Texture" id=3]
[ext_resource path="res://Icons64x64/Silible_End.png" type="Texture" id=4]
[ext_resource path="res://Icons64x64/Silible_Start.png" type="Texture" id=5]
[ext_resource path="res://theme/casper_dynamic_font.tres" type="DynamicFont" id=6]

[node name="Syllible Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 70.0

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
text = "Back"
icon = ExtResource( 1 )

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_top = 28.0
margin_right = 324.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 6 )
text = "SYLLIBLE EDITOR"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 984.0
margin_bottom = 500.0

[node name="Space" type="ColorRect" parent="VBoxContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
color = Color( 1, 1, 1, 0 )

[node name="InfoText" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 984.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 984.0
margin_bottom = 132.0

[node name="Space2" type="ColorRect" parent="VBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 984.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 20 )
color = Color( 1, 1, 1, 0 )

[node name="AddStartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 984.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 70 )
text = "ADD INITIAL SYLLIBLE"
icon = ExtResource( 5 )

[node name="Space3" type="ColorRect" parent="VBoxContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 984.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 20 )
color = Color( 1, 1, 1, 0 )

[node name="AddMidButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 984.0
margin_bottom = 328.0
rect_min_size = Vector2( 0, 70 )
text = "ADD MIDDLE SYLLIBLE"
icon = ExtResource( 3 )

[node name="Space4" type="ColorRect" parent="VBoxContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 984.0
margin_bottom = 352.0
rect_min_size = Vector2( 0, 20 )
color = Color( 1, 1, 1, 0 )

[node name="AddEndButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 984.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 70 )
text = "ADD FINAL SYLLIBLE"
icon = ExtResource( 4 )

[connection signal="button_down" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/AddStartButton" to="." method="_on_AddStartButton_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/AddMidButton" to="." method="_on_AddMidButton_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/AddEndButton" to="." method="_on_AddEndButton_button_down"]
